# AllJobsBot

./: .dockerignore  .env.dist  .gitignore  Dockerfile  Pipfile  README.md  app.py  bot.py  docker-compose.yml  loader.py  pyproject.toml  requirements.txt
data/: config.py  messages.py  tutorial.py
docker/: Dockerfile  docker-compose.yml
handlers/: __init__.py
handlers/admins/: __init__.py  enter.py  users.py
handlers/users/: __init__.py  filters.py  help.py  other.py  settings.py  start.py  subscribes.py  tutorial.py  update.py
keyboards/inline/: __init__.py  admin.py  filters.py  settings.py  subscribes.py  update.py  users.py
states/: filters.py
tgbot/: config.py
tgbot/filters/: admin.py
tgbot/handlers/: __init__.py  commands.py  filters.py  other.py  subscribes.py
tgbot/keyboards/: inline_keyboards.py
tgbot/middlewares/: __init__.py  throttling.py
tgbot/misc/: callbacks.py  messages.py  states.py
tgbot/services/: utils.py
tgbot/services/database/models/: __init__.py  filter.py  settings.py  tutorial.py  user.py
tgbot/services/parsers/: __init__.py  base_parser.py  freelanceru_parser.py  habr_parser.py  kwork_parser.py  models.py  schemas.py  weblancer_parser.py
tgbot/services/schedulers/: __init__.py  send_jobs.py
utils/: send_jobs.py  set_bot_commands.py
utils/db_api/: __init__.py  base.py  models.py
utils/db_api/models/: __init__.py  filter.py  last_job.py  subscribe.py  tutorial.py  user.py
utils/parsers/: __init__.py  core_parser.py  freelance_parser.py  habr_parser.py  parsers_helper.py  weblanser_parser.py
