[tool.poetry]
name = "alljobsbot"
version = "0.1.0"
description = ""
authors = ["PrinterOMG <PrinterOMG@ya.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.2"
aioredis = "^2.0.1"
environs = "^11.0.0"
lxml = "^5.2.2"
bs4 = "^0.0.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
aiohttp = "^3.8.0"
pydantic = "^2.7.4"
redis = "^5.0.7"
aioschedule = "^0.5.2"
pydantic-settings = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
